--- a/Database/20210424.md
+++ b/Database/20210424.md
@@ -1,2 +1,32 @@
+## 데이터베이스 스터디를 정리하는 곳입니다.
+
 ### 20210424 TIL
-데이터베이스 스터디를 정리하는 곳입니다.
+01. 파일 시스템
+ - 데이터를 파일로 관리하기 위해 파일의 생성, 삭제, 수정, 검색 기능을 제공하는 소프트웽
+ - 응용 프로그램마다 필요로 하는 데이터를 별도 파일로 관리한다
+ - 이 때문에 프로그램 각각이 필요로 하는 데이터의 중복이 발생하고, 데이터 파일에 프로그램이 종속되게 된다
+
+02. DBMS
+ - 파일 시스템의 문제를 해결하기 위해 제시된 시스템 방식
+ - 조직, 서비스, 프로그램에서 필요로 하는 데이터를 데이터베이스에 통합하여 저장, 관리
+
+03. DBMS의 주요 기능
+   1) 정의 기능: 조직이 필요로 하는 데이터를 저장하기 위해 적합한 구조를 정의, 이미 정의된 구조를 수정 가능
+   2) 조작 기능: 저장된 데이터에 접근하여 조작 가능(CRUD 연산)
+   3) 제어 기능: 저장된 데이터를 여러 사용자가 공유해도 일관되고 무결성을 유지하고 장애 발생해도 회복 하도록 제어 가능
+
+04. DBMS의 장단점
+   장점:
+    * 데이터 중복 통제
+    * 데이터 독립성 확보
+    * 데이터 동시 공유 가능
+    * 데이터 보안의 향상
+    * 데이터 무결성 유지
+    * 장애 발생시 회복 가능
+    * 응용 프로그램 개발 비용이 줄어든다
+   단점:
+    * 운영체제와 같이 설치되는 파일 시스템과 달리 따로 구매하고 설치
+    * DBMS는 복잡한 기능을 지원하기 위해컴퓨터 자원을 많이 사용한다
+    * 여러 사용자가 수많은 데이터에 접근 시 동시 공유를 지원해 장애 발생 시 백업과 회복의 방법이 복잡하다
+    * 중앙 집중 관리 방식의 시스템으로, DBMS 자체에 장애가 발생 시, 이에 의존하는 타 시스템의 신뢰성과 가용성에 치명적인 영향을 준다
+   
