--- a/Database/20210424.md
+++ b/Database/20210424.md
@@ -2,7 +2,7 @@
 
 ### 20210424 TIL
 01. 파일 시스템
- - 데이터를 파일로 관리하기 위해 파일의 생성, 삭제, 수정, 검색 기능을 제공하는 소프트웽
+ - 데이터를 파일로 관리하기 위해 파일의 생성, 삭제, 수정, 검색 기능을 제공하는 소프트웨어
  - 응용 프로그램마다 필요로 하는 데이터를 별도 파일로 관리한다
  - 이 때문에 프로그램 각각이 필요로 하는 데이터의 중복이 발생하고, 데이터 파일에 프로그램이 종속되게 된다
 
