--- a/Operating System/20210424.md
+++ b/Operating System/20210424.md
@@ -1,1 +1,21 @@
 운영체제 스터디를 정리하는 곳입니다.
+
+## 메모리 주소의 할당
+
+프로그램은 원래 이진 실행 파일의 형태로 디스크에 저장이 되어 있다.
+이를 실행하기 위해서는 프로그램을 메모리에 가져와서 Process Context 내에 배치를 해야 한다
+
+원시 프로그램에서 메모리 주소는 숫자가 아닌 심볼 형태로 표현된다. 컴파일러는 이 심볼 주소를 재배치 할 수 있는 주소로 바인딩 시키고,
+링커와 로더가 재배치 가능한 주소를 메모리 상의 절대 주소로 바인딩 시킨다
+
+메모리 주소 공간에서 명령어와 데이터가 바인딩 되는 시점에 따라 3가지로 구분된다
+
+1) 컴파일 시간
+  - 컴파일 시간에 프로세스가 메모리 내에 적재될 위치를 파악할 수 있다
+  - 프로세스의 시작 주소가 변경되면 다시 컴파일 해야 한다
+2) 적재 시간
+  - 바이너리 코드를 재배치 가능 코드로 만들고, 심볼과 물리 주소의 바인딩은 메모리 적재 시에 이뤄진다
+  - 시작 주소가 변경되어도 어느 시점에든 사용자 코드를 다시 적재하면 된다
+3) 실행 시간
+  - 프로세스 실행 도중에 메모리 구역에서 다른 구역으로 옮겨질 수 있으면 이는 실행 시간에 바인딩이 되는 것이다
+  - MMU라는 하드웨어 장치가 있어야 가능한 방식이다
