--- a/Operating System/20210424.md
+++ b/Operating System/20210424.md
@@ -6,10 +6,8 @@
 이를 실행하기 위해서는 프로그램을 메모리에 가져와서 Process Context 내에 배치를 해야 한다
 
 원시 프로그램에서 메모리 주소는 숫자가 아닌 심볼 형태로 표현된다. 컴파일러는 이 심볼 주소를 재배치 할 수 있는 주소로 바인딩 시키고,
-링커와 로더가 재배치 가능한 주소를 메모리 상의 절대 주소로 바인딩 시킨다
-
-![memory loading](https://user-images.githubusercontent.com/40064452/116262985-f832de80-a7b3-11eb-9c4b-2acff71343e9.png)
-
+링커와 로더가 재배치 가능한 주소를 메모리 상의 절대 주소로 바인딩 시킨다<br/><br/>
+![memory loading](https://user-images.githubusercontent.com/40064452/116262985-f832de80-a7b3-11eb-9c4b-2acff71343e9.png)<br/><br/>
 메모리 주소 공간에서 명령어와 데이터가 바인딩 되는 시점에 따라 3가지로 구분된다
 
 1) 컴파일 시간
@@ -20,4 +18,8 @@
     - 시작 주소가 변경되어도 어느 시점에든 사용자 코드를 다시 적재하면 된다
 3) 실행 시간
     - 프로세스 실행 도중에 메모리 구역에서 다른 구역으로 옮겨질 수 있으면 이는 실행 시간에 바인딩이 되는 것이다
-    - MMU라는 하드웨어 장치가 있어야 가능한 방식이다
+    - MMU라는 하드웨어 장치가 있어야 가능한 방식이다<br/><br/>
+
+출처: https://ryotta-205.tistory.com/29?category=916253
+
+참고 도서: 운영체제 10th Edition
